--- a/html/index.html
+++ b/html/index.html
@@ -9,32 +9,70 @@
 </head>
 <header >
     <!-- <nav class="navBar"> -->
-    <img src="/style/images/my brand.png" alt="mylogo">
+    <img src="/style/images/logo2.png" alt="mylogo" id="logo">
     <div class="infos">
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li> <a href="index.html">Home </a></li>
+            <li><a href="skills">Skills </a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact </a></li>
         </ul>
     </div>
     <!-- </nav> -->
 </header>
-<body>
-    <main class="body">
+<body > 
+    <main class="body" >
         <section class="names">
             <p>Hello i´m</p>
             <p id="me">Sidy Denon</p>
-            <p id="dest" >And, i´m a <span id="job">FullStack Developper</span></p>
-            <p style="color: gray;">Hi! I'm Sidy Denon, a passionate fullstack developer dedicated to crafting exceptional web experiences. With strong expertise in both frontend and backend development, I design, build, and deploy robust and intuitive web applications. Explore my portfolio to see my projects and skills in action.</p>
-            <input type="button" value="Download cv" id="download">
+            <p style="font-weight: bold;">And, i´m a <span style="color: aqua;" >FullStack Developper</span></p>
+            <p style="color: gray; z-index: 2;">Hi! I'm Sidy Denon, a passionate fullstack developer dedicated to crafting exceptional web experiences. With strong expertise in both frontend and backend development, I design, build, and deploy robust and intuitive web applications. Explore my portfolio to see my projects and skills in action.</p>
+            <input type="button" value="Download cv" id="download" style="z-index: 10;">
         </section>
         <section>
             <div class="photo">
                 <img src="/style/images/my photo.png" alt="myPhoto">
             </div>
         </section>
+        
     </main>
+    
+    <h1 id="skills">Skil<span style="color: aqua; font-size: 2rem;">ls</span><div></div></h1>
+
+    <section class="skills">
+        <div class="skill skill1">
+            <img src="/style/images/pngegg (2).png" alt="HTML">
+            <h1>HTML5</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="skill skill2">
+            <img src="/style/images/pngegg (1).png" alt="CSS">
+            <h1>CSS3</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="skill skill3">
+            <img src="/style/images/pngegg.png" alt="JavaScript">
+            <h1>JavaScript</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="skill skill4">
+            <img src="/style/images/pngegg (4).png" alt="Git/GitHub">
+            <h1>GIT / GITHUB</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="skill skill5">
+            <img src="/style/images/pngegg (3).png" alt="REACT js">
+            <h1>REACT JS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="skill skill6">
+            <img src="/style/images/pngegg (5).png" alt="REDUX ">
+            <h1>REDUX</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+    </section>
+
 </body>
+<script src="/app.js"></script>
 </html>
